[gd_scene load_steps=29 format=3 uid="uid://bdf6man740sfp"]

[ext_resource type="Script" uid="uid://dcpctmghu7sj0" path="res://Assets/Scripts/quest.gd" id="1_hpvyu"]
[ext_resource type="Script" uid="uid://bp88l1cr6pmet" path="res://Assets/Scripts/ysort.gd" id="2_cghks"]
[ext_resource type="Texture2D" uid="uid://bka2qjekwhbxy" path="res://Assets/Sprites/Village stuff/shop.png" id="3_7n0wa"]
[ext_resource type="PackedScene" uid="uid://x7aefogr7p5h" path="res://Assets/Scenes/cameraV2.tscn" id="4_q7nus"]
[ext_resource type="PackedScene" uid="uid://03mgpexvipmk" path="res://Assets/Scenes/omyx.tscn" id="5_3h1e5"]
[ext_resource type="PackedScene" uid="uid://bkgiu8550khv3" path="res://Assets/Scenes/yamex.tscn" id="6_7n0wa"]
[ext_resource type="Texture2D" uid="uid://bjug2g4i6bqau" path="res://Assets/Sprites/Village stuff/the village.png" id="8_vodrp"]
[ext_resource type="Script" uid="uid://dowkd03utrpd1" path="res://Assets/Scripts/cutscene_find.gd" id="9_3h1e5"]
[ext_resource type="Script" uid="uid://c3ntygay8fjod" path="res://Assets/Scripts/move.gd" id="9_7n0wa"]
[ext_resource type="Script" uid="uid://7n020g2ew4w4" path="res://Assets/Scripts/o_faded.gd" id="9_q7nus"]
[ext_resource type="Script" uid="uid://baq7b285oggpx" path="res://Assets/Scripts/camera_move.gd" id="10_gtvg3"]
[ext_resource type="Script" uid="uid://f7gejia27q3d" path="res://Assets/Scripts/can_move.gd" id="13_pr8vc"]
[ext_resource type="Texture2D" uid="uid://decajqscmk44v" path="res://Assets/Sprites/Villagers/village lady.png" id="13_sju8r"]
[ext_resource type="PackedScene" uid="uid://b6avnrjie6vn3" path="res://Assets/Scenes/mission.tscn" id="14_pr8vc"]
[ext_resource type="Texture2D" uid="uid://de2j5o7rdqlq3" path="res://Assets/Sprites/Villagers/black smith.png" id="15_rvclh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x1fl"]
size = Vector2(7, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q4i8"]
size = Vector2(8, 19.5258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sju8r"]
size = Vector2(85.5583, 1.3515)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr8vc"]
size = Vector2(1.6503, 43.3811)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr8vc"]
atlas = ExtResource("13_sju8r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvclh"]
atlas = ExtResource("13_sju8r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sju8r"]
atlas = ExtResource("13_sju8r")
region = Rect2(87, 14, 20, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yb6p"]
atlas = ExtResource("13_sju8r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_njbv4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr8vc")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvclh")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sju8r")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yb6p")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvclh"]
size = Vector2(36.1703, 25.4537)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lei0k"]
size = Vector2(36.1703, 24.2775)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yb6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njbv4"]
size = Vector2(20, 22.3917)

[node name="Quest" type="Node2D"]
position = Vector2(0, 0.145)
script = ExtResource("1_hpvyu")

[node name="Shop" type="Sprite2D" parent="."]
z_index = 662
y_sort_enabled = true
position = Vector2(306, 662)
texture = ExtResource("3_7n0wa")
offset = Vector2(20.565, -52.435)
region_enabled = true
region_rect = Rect2(65, 39, 177, 172)

[node name="label" type="Sprite2D" parent="Shop"]
z_index = 2556
position = Vector2(111, 27)
texture = ExtResource("3_7n0wa")
offset = Vector2(20.565, -52.435)
region_enabled = true
region_rect = Rect2(241, 134, 48, 36)

[node name="map" type="Node2D" parent="."]
y_sort_enabled = true

[node name="TheVillage" type="Sprite2D" parent="map"]
y_sort_enabled = true
position = Vector2(750, 750)
texture = ExtResource("8_vodrp")
metadata/_edit_lock_ = true

[node name="characters" type="Node2D" parent="."]

[node name="Ysort" type="Node2D" parent="characters"]
script = ExtResource("2_cghks")

[node name="omyx" type="CharacterBody2D" parent="characters" groups=["player"]]
unique_name_in_owner = true
z_index = 255
position = Vector2(440, 255)

[node name="CollisionShape2D" type="CollisionShape2D" parent="characters/omyx"]
position = Vector2(0.498978, 10.3864)
shape = SubResource("RectangleShape2D_5x1fl")

[node name="Sprite" parent="characters/omyx" instance=ExtResource("5_3h1e5")]
animation = &"down"

[node name="yamex" type="CharacterBody2D" parent="characters" groups=["player"]]
unique_name_in_owner = true
z_index = 255
position = Vector2(468, 255)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="characters/yamex"]
position = Vector2(0.481, 10.617)
shape = SubResource("RectangleShape2D_6q4i8")

[node name="Sprite" parent="characters/yamex" instance=ExtResource("6_7n0wa")]
animation = &"down"
offset = Vector2(0, 1)

[node name="camera" parent="." instance=ExtResource("4_q7nus")]
unique_name_in_owner = true
z_index = 269
position = Vector2(453, 269)
anchor_mode = 1
zoom = Vector2(5.43, 5.43)
limit_left = 0
limit_top = 0
limit_right = 1500
limit_bottom = 1500
position_smoothing_speed = 4.0
editor_draw_limits = true

[node name="cutscene_find" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("9_3h1e5")

[node name="camera_move" type="Node2D" parent="."]
z_index = 287
position = Vector2(453, 287)
script = ExtResource("10_gtvg3")

[node name="move" type="Node2D" parent="."]
z_index = 1158
position = Vector2(726.514, 1158.62)
script = ExtResource("9_7n0wa")

[node name="Area2D" type="Area2D" parent="move"]
position = Vector2(16.9981, 21.4014)

[node name="CollisionShape2D" type="CollisionShape2D" parent="move/Area2D"]
position = Vector2(45.5809, -12.2675)
shape = SubResource("RectangleShape2D_sju8r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="move/Area2D"]
position = Vector2(-13.8812, -25.4399)
rotation = -0.916298
shape = SubResource("RectangleShape2D_pr8vc")

[node name="Leader" type="Marker2D" parent="move"]
position = Vector2(19.043, 3.867)

[node name="Follower" type="Marker2D" parent="move"]
position = Vector2(19.0428, 28.2158)

[node name="o_faded" type="Node2D" parent="."]
script = ExtResource("9_q7nus")

[node name="village_lady" type="Node2D" parent="."]
z_index = 1201
position = Vector2(591.389, 1201.16)
scale = Vector2(0.905, 0.905)

[node name="Sprite" type="AnimatedSprite2D" parent="village_lady"]
position = Vector2(-0.167796, -27.025)
sprite_frames = SubResource("SpriteFrames_njbv4")
animation = &"right"
autoplay = "right"
offset = Vector2(0, 5.23)

[node name="Coll" type="CharacterBody2D" parent="village_lady"]
position = Vector2(0.141156, -0.0616417)

[node name="CollisionShape2D" type="CollisionShape2D" parent="village_lady/Coll"]
position = Vector2(-0.202515, -7.54712)
shape = SubResource("RectangleShape2D_rvclh")

[node name="Area2D" type="Area2D" parent="village_lady"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="village_lady/Area2D"]
position = Vector2(0.257141, 4.27759)
shape = SubResource("RectangleShape2D_lei0k")

[node name="Leader" type="Marker2D" parent="village_lady"]
position = Vector2(-17.3508, 6.38314)

[node name="Follower" type="Marker2D" parent="village_lady"]
position = Vector2(18.8537, 6.38314)

[node name="can_move" type="Node2D" parent="."]
script = ExtResource("13_pr8vc")

[node name="Mission" parent="." instance=ExtResource("14_pr8vc")]

[node name="BlackSmith" type="Node2D" parent="."]
position = Vector2(560.515, 512.07)
scale = Vector2(0.765, 0.765)

[node name="Area2D" type="Area2D" parent="BlackSmith"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackSmith/Area2D"]
shape = SubResource("RectangleShape2D_3yb6p")

[node name="blacksmith" type="CharacterBody2D" parent="BlackSmith"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlackSmith/blacksmith"]
position = Vector2(0, -11.1911)
shape = SubResource("RectangleShape2D_njbv4")

[node name="BlackSmith" type="Sprite2D" parent="BlackSmith/blacksmith"]
position = Vector2(0, -21.479)
texture = ExtResource("15_rvclh")
region_enabled = true
region_rect = Rect2(22, 14, 20, 43)

[node name="Leader" type="Marker2D" parent="BlackSmith"]
position = Vector2(-17.3508, 6.38314)

[node name="Follower" type="Marker2D" parent="BlackSmith"]
position = Vector2(18.8537, 6.38314)

[connection signal="body_entered" from="move/Area2D" to="move" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="village_lady/Area2D" to="move" method="_on_noova_body_entered" flags=3]
[connection signal="body_exited" from="village_lady/Area2D" to="move" method="_on_noova_body_exited" flags=3]
[connection signal="body_entered" from="BlackSmith/Area2D" to="move" method="_on_BlackSmith_body_entered" flags=3]
[connection signal="body_exited" from="BlackSmith/Area2D" to="move" method="_on_area_2d_body_exited"]
